--- a/_config.yml
+++ b/_config.yml
@@ -13,36 +13,36 @@ baseurl: ""
 lang: en
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: America/New_York
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Homelab Docs # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Kalvin's Homelab Documentation # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Kalvin's Homelab Documentation Website built on Jekyll
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://Kalvin-Twitty.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: Kalvin-Twitty # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: Synvii_ # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Kalvin C. Twitty
+  email: Kalvintwitty@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/Synvii_ # change to your twitter homepage
+    - https://github.com/Kalvin-Twitty # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/FF4 Profile Logo.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
