--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   Kalvin's Homelab Documentation Website built on Jekyll
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: "https://kalvin-twitty.github.io"
+url: "https://Kalvin-Twitty.github.io"
 
 github:
   username: Kalvin-Twitty # change to your github username
