--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,18 +1,21 @@
 #  The contact options.
 
 - type: github
-  icon: "fab fa-github"
+  icon: "https://github.com/Kalvin-Twitty"
 
 - type: twitter
-  icon: "fab fa-twitter"
+  icon: "https://twitter.com/Synvii_"
+-
+  type: youtube
+  icon: 'fab fa-youtube'
+  url: 'https://www.youtube.com/channel/UC9H7E_FAkk7zgHxXIBxrEIA'
+#- type: email
+#  icon: "fas fa-envelope"
+#  noblank: true # open link in current tab
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
-
-- type: rss
-  icon: "fas fa-rss"
-  noblank: true
+# - type: rss
+# icon: "fas fa-rss"
+#  noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
