--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: assets/FF4 Profile Logo.png
+avatar: https://ibb.co/1qKCsNJ
 
 # boolean type, the global switch for TOC in posts.
 toc: true
