Edited Comments, added a new line to the file _config.yml and _data/contact.yml

--- a/_config.yml
+++ b/_config.yml
@@ -30,10 +30,12 @@ url: "https://Kalvin-Twitty.github.io"
 
 github:
   username: Kalvin-Twitty # change to your github username
-
 twitter:
   username: Synvii_ # change to your twitter username
-
+twitch:
+  username: Synvii
+tiktok:
+  username: "@synviii"
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
