--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,15 +1,19 @@
 #  The contact options.
 
-- type: github
+- 
+  type: github
   icon: "fab fa-github"
   url: "https://github.com/Kalvin-Twitty"
-- type: twitter
+- 
+  type: twitter
   icon: "fab fa-twitter"
   url: "https://twitter.com/Synvii_"
-- type: youtube
+- 
+  type: youtube
   icon: "fab fa-youtube"
   url: "https://www.youtube.com/channel/UC9H7E_FAkk7zgHxXIBxrEIA"
-- type: twitch
+- 
+  type: twitch
   icon: "fab fa-twitch"
   url: "https://www.twitch.tv/synvii"
 #- type: email
